--- a/asset/css/item-carousel.css
+++ b/asset/css/item-carousel.css
@@ -60,3 +60,11 @@
 p, ul {
         margin: 0;
 }
+
+.carousel-caption {
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    right: 0;
+    padding: 0 15%;
+}
